# ollamaintroduction

./: .gitignore  README.md  main.py  pyproject.toml
course_materials/: 1_Kapitel.md  2.5_Kapitel.md  2_Kapitel.md  3_Kapitel.md  4_Kapitel.md  5_Kapitel.md  Presi_20251113.md
course_materials/data/: Modelfile  workshop2025_testdata - Tabellenblatt1.csv
src/: generate_qrcode.py  model_download.py  openrefine.py
